# agents

./: .env.example  .gitignore  Dockerfile  agent.py  alpha_vantage.py  main.py  pyproject.toml
agent/: __init__.py  base.py  coordinator.py  datacollectionagent.py  fundamentalagent.py  queryagent.py  riskagent.py  sentimentagent.py  synthesisagent.py  technicalagent.py
agents/: .gitignore  Dockerfile  base.py  fundamental.py  main.py  portfolio.py  pyproject.toml  risk.py  sentiment.py  technical.py
agents/agents/: base.py  fundamental.py  risk.py  sentiment.py  technical.py
agents/config/: settings.py
agents/core/: logging.py  schemas.py
agents/routers/: analysis.py  healthcheck.py
agents/services/: explainer.py  (+2 more)
backend/: docker-compose.yml  main.py  pyproject.toml
backend/agents/: base.py  fundamental.py  portfolio.py  sentiment.py  technical.py
backend/config/: settings.py
backend/core/: schemas.py
backend/prompts/: prompts.py
backend/routers/: analysis.py  fetch_intraday.py  healthcheck.py  prediction.py
backend/services/: agent_selector.py  cache.py  explainer.py  llm.py  price_tool.py
backend/static/: company_search.json
config/: settings.py
core/: logging.py
etypes/: event_types.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
llm/: model.py
prompts/: prompts.py
routers/: analysis.py  fetch_daily.py  fetch_intraday.py
schema/: schema.py
services/: agent_selector.py  aggregator.py  alpha_vantage.py  cache.py  explainer.py  gemini.py  llm.py
static/: company_search.json
utils/: logger.py
(+22 files in other folders)
